--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -187,6 +187,21 @@ en:
         title:
           zero: Are you expecting more than one baby?
           one: Is %{name} expecting more than one baby?
+    job_details:
+      edit:
+        title:
+          primary_member:
+            one: Tell us about your job.
+            other: Tell us about your jobs.
+          other_member:
+            one: Tell us about %{name}'s job.
+            other: Tell us about %{name}'s jobs.
+        hourly_or_salary_label:
+          zero: Are you hourly or salaried?
+          one: Is %{name} hourly or salaried?
+        payment_frequency_label:
+          zero: How often do you get a paycheck?
+          one: How often does %{name} get a paycheck?
     income_sources:
       edit:
         title:
